changed the code a little bit

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <hr />
 
     <footer>
-      <p>&copy; 2026 Kaivalya. All rights reserved.</p>
+      <p>&copy; 2026 Kaivalya &hearts;. All rights reserved.</p>
     </footer>
   </body>
 </html>
